--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 h2{
-    color:rgb(248, 5, 86);
+    color:rgb(216, 35, 95);
 }
 
 body{
-    background: linear-gradient(#330786 1%,#070018 40%);
-    color: rgb(192, 160, 233);
+    background-color: blueviolet;
+    background-image: linear-gradient(to right, rgb(197, 39, 171)transparent);
+    color: rgb(3, 3, 3);
     font-family: Roboto;
     text-align: center;
+    border-radius: 10px;
+    position: absolute;
+  
 }
 
 header{
@@ -14,13 +18,5 @@ header{
 }
 
 footer{
-    border-top: 1px solid rgb(128, 127, 127);
-}
-
-#nome-usuário{
-    font-weight: bold;
-}
-
-.texto-inglês{
-    font-style: italic;
+    border-top: 1px solid rgb(0, 0, 0);
 }
